# x11guard

./: CMakeLists.txt  LICENSE  PKGBUILD  README.md  library.c  library.h  x11guard-global-hook.sh
